2024-04-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha02: Goat Cheese Hamburguesa';git push
	git tag -a 5.2.4-alpha02 -m 'ncclimo: tm_bnds err dgn';git push --tags

	* ncclimo add sanity check to inferred value of tm_bnds. Print meaningful error and workaround then exit.

2024-04-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha01: Silken Rio';git push
	git tag -a 5.2.4-alpha01 -m 'Functionally identical to 5.2.3';git push --tags

	* ncclimo/ncremap: Deprecate --gres=craynetwork:0 since not available on Perlmutter, and keep --mem option

2024-04-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.3: Cowboy Carter';git push
	git tag -a 5.2.3 -m 'all: mss_val wrn; ncclimo: rgn_avg fix elm, hrz_dmn, hrz_arg, area_wgt, ppn_opt; ncremap: upd doc';git push --tags

	* NCO 5.2.3-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.3-beta01: Stormy Saturday';git push
	git tag -a 5.2.3-beta01 -m 'all: mss_val wrn; ncclimo: rgn_avg fix elm, hrz_dmn, hrz_arg, area_wgt, ppn_opt; ncremap: upd doc';git push --tags

2024-04-01  Charlie Zender  <zender@uci.edu>

	* ncclimo: Add ppn_opt to ncks/ncap2 calls so operators find files when cwd != drc_in

	* ncclimo/ncremap: Clarify that '=' is REQUIRED for long options

2024-03-30  Charlie Zender  <zender@uci.edu>

	* nco.texi: more documentation fixes/updates on supported/default regridding algorithms

	* NCO 5.2.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.3-alpha02: Grandparent Promotion';git push
	git tag -a 5.2.3-alpha02 -m 'all: mss_val wrn; ncclimo: rgn_avg	fix elm, hrz_dmn, hrz_arg, area_wgt';git push --tags

	* ncclimo: Verify that ELM glb_avg is accurate

	* ncclimo: automatically determine sgs_frc, area_wgt from prc_typ, now no var_xtr necessary for rgn_avg
