@@ -1,8 +1,16 @@
-2024-04-07  Charlie Zender  <zender@uci.edu>
+2024-04-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.4-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha02: Goat Cheese Hamburguesa';git push
-	git tag -a 5.2.4-alpha02 -m 'ncclimo: tm_bnds err dgn';git push --tags
+	git tag -a 5.2.4-alpha02 -m 'all: NCO client nco_qnt_mtd(); ncclimo: tm_bnds err dgn';git push --tags
+
+	* all: verify CF quantization metadata works for libnco
+
+	* all: Invoke nco_qnt_mtd() from nco_ppc_bitmask() so NCO client quantization records CF metadata
+
+	* all: Pass output group and variable IDs to nco_ppc_bitmask()
+
+2024-04-07  Charlie Zender  <zender@uci.edu>
 
 	* ncclimo add sanity check to inferred value of tm_bnds. Print meaningful error and workaround then exit.
 
